physx-sys/src/physx_generated.hpp

uint32_t PxVehicleNoDrive_getNbDriveTorque(physx_PxVehicleNoDrive_Pod const* self__pod) {
physx::PxVehicleNoDrive const* self_ = reinterpret_cast<physx::PxVehicleNoDrive const*>(self__pod);
uint32_t returnValue = self_->getNbDriveTorque();
return returnValue;
}
uint32_t PxVehicleNoDrive_getNbBrakeTorque(physx_PxVehicleNoDrive_Pod const* self__pod) {
physx::PxVehicleNoDrive const* self_ = reinterpret_cast<physx::PxVehicleNoDrive const*>(self__pod);
uint32_t returnValue = self_->getNbBrakeTorque();
return returnValue;
}
void* PxProfilerCallback_zoneStart_mut(physx_PxProfilerCallback_Pod* self__pod, char const* eventName, bool detached, uint64_t contextId) {
physx::PxProfilerCallback* self_ = reinterpret_cast<physx::PxProfilerCallback*>(self__pod);
void* returnValue = self_->zoneStart(eventName, detached, contextId);
return returnValue;
}
void PxProfilerCallback_zoneEnd_mut(physx_PxProfilerCallback_Pod* self__pod, void* profilerData, char const* eventName, bool detached, uint64_t contextId) {
physx::PxProfilerCallback* self_ = reinterpret_cast<physx::PxProfilerCallback*>(self__pod);
self_->zoneEnd(profilerData, eventName, detached, contextId);
}
physx_PxProfileScoped_Pod* PxProfileScoped_new_alloc(physx_PxProfilerCallback_Pod* callback_pod, char const* eventName, bool detached, uint64_t contextId) {
physx::PxProfilerCallback* callback = reinterpret_cast<physx::PxProfilerCallback*>(callback_pod);
auto returnValue = new physx::PxProfileScoped(callback, eventName, detached, contextId);
physx_PxProfileScoped_Pod* returnValue_pod = reinterpret_cast<physx_PxProfileScoped_Pod*>(returnValue);
return returnValue_pod;
}
void PxProfileScoped_delete(physx_PxProfileScoped_Pod* self__pod) {
physx::PxProfileScoped* self_ = reinterpret_cast<physx::PxProfileScoped*>(self__pod);
delete self_;
}
bool PxPvd_connect_mut(physx_PxPvd_Pod* self__pod, physx_PxPvdTransport_Pod* transport_pod, physx_PxPvdInstrumentationFlags_Pod flags_pod) {
physx::PxPvd* self_ = reinterpret_cast<physx::PxPvd*>(self__pod);
physx::PxPvdTransport& transport = reinterpret_cast<physx::PxPvdTransport&>(*transport_pod);
physx::PxPvdInstrumentationFlags flags;
memcpy(&flags, &flags_pod, sizeof(flags));
bool returnValue = self_->connect(transport, flags);
return returnValue;
}
void PxPvd_disconnect_mut(physx_PxPvd_Pod* self__pod) {
physx::PxPvd* self_ = reinterpret_cast<physx::PxPvd*>(self__pod);
self_->disconnect();
}
bool PxPvd_isConnected_mut(physx_PxPvd_Pod* self__pod, bool useCachedStatus) {
physx::PxPvd* self_ = reinterpret_cast<physx::PxPvd*>(self__pod);
bool returnValue = self_->isConnected(useCachedStatus);
return returnValue;
}
physx_PxPvdTransport_Pod* PxPvd_getTransport_mut(physx_PxPvd_Pod* self__pod) {
physx::PxPvd* self_ = reinterpret_cast<physx::PxPvd*>(self__pod);
physx::PxPvdTransport* returnValue = self_->getTransport();
physx_PxPvdTransport_Pod* returnValue_pod = reinterpret_cast<physx_PxPvdTransport_Pod*>(returnValue);
return returnValue_pod;
}
physx_PxPvdInstrumentationFlags_Pod PxPvd_getInstrumentationFlags_mut(physx_PxPvd_Pod* self__pod) {
physx::PxPvd* self_ = reinterpret_cast<physx::PxPvd*>(self__pod);
physx::PxPvdInstrumentationFlags returnValue = self_->getInstrumentationFlags();
physx_PxPvdInstrumentationFlags_Pod returnValue_pod;
memcpy(&returnValue_pod, &returnValue, sizeof(returnValue_pod));
return returnValue_pod;
}
void PxPvd_release_mut(physx_PxPvd_Pod* self__pod) {
physx::PxPvd* self_ = reinterpret_cast<physx::PxPvd*>(self__pod);
self_->release();
}
physx_PxPvd_Pod* phys_PxCreatePvd(physx_PxFoundation_Pod* foundation_pod) {
physx::PxFoundation& foundation = reinterpret_cast<physx::PxFoundation&>(*foundation_pod);
physx::PxPvd* returnValue = PxCreatePvd(foundation);
physx_PxPvd_Pod* returnValue_pod = reinterpret_cast<physx_PxPvd_Pod*>(returnValue);
return returnValue_pod;
}
bool PxPvdTransport_connect_mut(physx_PxPvdTransport_Pod* self__pod) {
physx::PxPvdTransport* self_ = reinterpret_cast<physx::PxPvdTransport*>(self__pod);
bool returnValue = self_->connect();
return returnValue;
}
void PxPvdTransport_disconnect_mut(physx_PxPvdTransport_Pod* self__pod) {
physx::PxPvdTransport* self_ = reinterpret_cast<physx::PxPvdTransport*>(self__pod);
self_->disconnect();
}
bool PxPvdTransport_isConnected_mut(physx_PxPvdTransport_Pod* self__pod) {
physx::PxPvdTransport* self_ = reinterpret_cast<physx::PxPvdTransport*>(self__pod);
bool returnValue = self_->isConnected();
return returnValue;
}
bool PxPvdTransport_write_mut(physx_PxPvdTransport_Pod* self__pod, unsigned char const* inBytes, uint32_t inLength) {
physx::PxPvdTransport* self_ = reinterpret_cast<physx::PxPvdTransport*>(self__pod);
bool returnValue = self_->write(inBytes, inLength);
return returnValue;
}
physx_PxPvdTransport_Pod* PxPvdTransport_lock_mut(physx_PxPvdTransport_Pod* self__pod) {
physx::PxPvdTransport* self_ = reinterpret_cast<physx::PxPvdTransport*>(self__pod);
physx::PxPvdTransport& returnValue = self_->lock();
physx_PxPvdTransport_Pod* returnValue_pod = reinterpret_cast<physx_PxPvdTransport_Pod*>(&returnValue);
return returnValue_pod;
}
void PxPvdTransport_unlock_mut(physx_PxPvdTransport_Pod* self__pod) {
physx::PxPvdTransport* self_ = reinterpret_cast<physx::PxPvdTransport*>(self__pod);
self_->unlock();
}
void PxPvdTransport_flush_mut(physx_PxPvdTransport_Pod* self__pod) {
physx::PxPvdTransport* self_ = reinterpret_cast<physx::PxPvdTransport*>(self__pod);
self_->flush();
}
uint64_t PxPvdTransport_getWrittenDataSize_mut(physx_PxPvdTransport_Pod* self__pod) {
physx::PxPvdTransport* self_ = reinterpret_cast<physx::PxPvdTransport*>(self__pod);
uint64_t returnValue = self_->getWrittenDataSize();
return returnValue;
}
void PxPvdTransport_release_mut(physx_PxPvdTransport_Pod* self__pod) {
physx::PxPvdTransport* self_ = reinterpret_cast<physx::PxPvdTransport*>(self__pod);
self_->release();
}
physx_PxPvdTransport_Pod* phys_PxDefaultPvdSocketTransportCreate(char const* host, int32_t port, uint32_t timeoutInMilliseconds) {
physx::PxPvdTransport* returnValue = PxDefaultPvdSocketTransportCreate(host, port, timeoutInMilliseconds);
physx_PxPvdTransport_Pod* returnValue_pod = reinterpret_cast<physx_PxPvdTransport_Pod*>(returnValue);
return returnValue_pod;
}
physx_PxPvdTransport_Pod* phys_PxDefaultPvdFileTransportCreate(char const* name) {
physx::PxPvdTransport* returnValue = PxDefaultPvdFileTransportCreate(name);
physx_PxPvdTransport_Pod* returnValue_pod = reinterpret_cast<physx_PxPvdTransport_Pod*>(returnValue);
return returnValue_pod;
}