physx-sys/src/physx_generated.rs

pub fn PxVehicleNoDrive_getNbDriveTorque(self_: *const PxVehicleNoDrive, ) -> u32;
pub fn PxVehicleNoDrive_getNbBrakeTorque(self_: *const PxVehicleNoDrive, ) -> u32;
pub fn PxProfilerCallback_zoneStart_mut(self_: *mut PxProfilerCallback, eventName: *const i8, detached: bool, contextId: usize, ) -> *mut std::ffi::c_void;
pub fn PxProfilerCallback_zoneEnd_mut(self_: *mut PxProfilerCallback, profilerData: *mut std::ffi::c_void, eventName: *const i8, detached: bool, contextId: usize, ) -> ();
pub fn PxProfileScoped_new_alloc(callback: *mut PxProfilerCallback, eventName: *const i8, detached: bool, contextId: usize, ) -> *mut PxProfileScoped;
pub fn PxProfileScoped_delete(self_: *mut PxProfileScoped, ) -> ();
pub fn PxPvd_connect_mut(self_: *mut PxPvd, transport: *mut PxPvdTransport, flags: PxPvdInstrumentationFlags, ) -> bool;
pub fn PxPvd_disconnect_mut(self_: *mut PxPvd, ) -> ();
pub fn PxPvd_isConnected_mut(self_: *mut PxPvd, useCachedStatus: bool, ) -> bool;
pub fn PxPvd_getTransport_mut(self_: *mut PxPvd, ) -> *mut PxPvdTransport;
pub fn PxPvd_getInstrumentationFlags_mut(self_: *mut PxPvd, ) -> PxPvdInstrumentationFlags;
pub fn PxPvd_release_mut(self_: *mut PxPvd, ) -> ();
pub fn phys_PxCreatePvd(foundation: *mut PxFoundation, ) -> *mut PxPvd;
pub fn PxPvdTransport_connect_mut(self_: *mut PxPvdTransport, ) -> bool;
pub fn PxPvdTransport_disconnect_mut(self_: *mut PxPvdTransport, ) -> ();
pub fn PxPvdTransport_isConnected_mut(self_: *mut PxPvdTransport, ) -> bool;
pub fn PxPvdTransport_write_mut(self_: *mut PxPvdTransport, inBytes: *const u8, inLength: u32, ) -> bool;
pub fn PxPvdTransport_lock_mut(self_: *mut PxPvdTransport, ) -> *mut PxPvdTransport;
pub fn PxPvdTransport_unlock_mut(self_: *mut PxPvdTransport, ) -> ();
pub fn PxPvdTransport_flush_mut(self_: *mut PxPvdTransport, ) -> ();
pub fn PxPvdTransport_getWrittenDataSize_mut(self_: *mut PxPvdTransport, ) -> usize;
pub fn PxPvdTransport_release_mut(self_: *mut PxPvdTransport, ) -> ();
pub fn phys_PxDefaultPvdSocketTransportCreate(host: *const i8, port: i32, timeoutInMilliseconds: u32, ) -> *mut PxPvdTransport;
pub fn phys_PxDefaultPvdFileTransportCreate(name: *const i8, ) -> *mut PxPvdTransport;
}
